fix(plugins/plugin-core-support): sidecar screenshot of tables too wide
Fixes #1621

--- a/plugins/plugin-core-support/web/css/screenshot.css
+++ b/plugins/plugin-core-support/web/css/screenshot.css
@@ -13,7 +13,7 @@ body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish sidecar 
 body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish {
     flex: initial;
 }
-body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish .custom-content, body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish .sidecar-content {
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish sidecar .custom-content, body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish sidecar .sidecar-content {
     flex: initial;
 }
 
